--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -42,6 +42,9 @@
     </div>
     <!-- <div class="col-sm-1"  ></div> -->
     <div class="col-sm-10" >
+        <ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" type="ball-spin-clockwise">  
+            <p style="color: white">Please Wait. </p>  
+        </ngx-spinner>
         <div class="card-data">
             <div class="card"  *ngFor="let data of launch_date">
                 <img class="card-img-top" src={{data.links.mission_patch}} alt="Mission patch of {{ data.mission_name }}">
@@ -50,7 +53,8 @@
                   <p class="card-text"><span style="font-weight: 500;color:black">Mission IDs:</span>{{data.mission_id}}</p>
                   <p class="card-text"><span style="font-weight: 500;color:black">Launch Date:</span>{{data.launch_year}}</p>
                   <p class="card-text"><span style="font-weight: 500;color:black">Successful Launch:</span>{{data.launch_success}}</p>
-                  <p class="card-text"><span style="font-weight: 500;color:black" >Successful Landing:</span>{{data.rocket.first_stage.cores[0].land_success}}</p>
+                  <p class="card-text"*ngIf="data.rocket.first_stage.cores[0].land_success != null"><span style="font-weight: 500;color:black" >Successful Landing:</span>{{data.rocket.first_stage.cores[0].land_success}}</p>
+                  <p class="card-text"*ngIf="data.rocket.first_stage.cores[0].land_success == null"><span style="font-weight: 500;color:black" >Successful Landing:</span>NA</p>
                   
                 </div>
             </div> 
@@ -60,4 +64,7 @@
    </div>
    
    
+</div>
+<div class="footer">
+    <p>Developed by:<span>Adyasa saniel singh</span></p>
 </div>
